--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,24 @@
 {
+  "include": [
+    "./lib/**/*",
+    "./index.ts",
+    "./client.ts"
+  ],
   "compilerOptions": {
+    "outDir": "./dist-server",
     "module": "commonjs",
+    "moduleResolution": "node",
+    "allowJs": true,
     "target": "es5",
     "lib": [
       "dom",
-      "es5",
+      "es6",
       "es2015.promise"
     ],
     "noImplicitAny": false,
+    "noImplicitReturns": true,
     "sourceMap": true,
+    "baseUrl": ".",
     "typeRoots": [
       "./node_modules/@types"
     ],
