Updated for compiling ts, and cleaning js, js.map files and reverted module.exports change

--- a/package.json
+++ b/package.json
@@ -14,36 +14,42 @@
     "formidable": "1.1.1",
     "mongodb-bluebird": "0.1.2",
     "nconf": "0.8.5",
-    "persistor": "2.3.*",
+    "persistor": "^2.3.10",
     "semotus": "2.3.*",
     "serve-static": "1.13.1",
     "supertype": "2.2.*",
     "uglify-js": "2.7.5"
   },
   "devDependencies": {
+    "@types/chai": "4.0.4",
+    "@types/mocha": "2.2.43",
+    "@types/node": "8.0.46",
     "axios": "0.17.0",
     "chai": "4.1.2",
+    "es6-promise": "4.1.1",
     "eslint": "4.9.0",
     "istanbul": "0.4.5",
     "mocha": "4.0.1",
     "mock-fs": "4.4.1",
     "request": "2.83.0",
     "sinon": "4.0.1",
-    "xmlhttprequest-cookie": "0.9.4",
-    "@types/chai": "4.0.4",
-    "@types/mocha": "2.2.43",
-    "@types/node": "8.0.46",
-    "typescript": "2.5.3",
     "ts-node": "3.3.0",
-    "es6-promise": "4.1.1"
+    "typescript": "2.7.2",
+    "xmlhttprequest-cookie": "0.9.4"
   },
   "scripts": {
+    "build": "node_modules/typescript/bin/tsc",
+    "clean": "rm -Rf *.js && rm -Rf *.js.map && rm -Rf lib/**/*.js && rm -Rf lib/**/*.js.map",
+    "build:tstests": "node_modules/typescript/bin/tsc -p typescript_tests",
+    "clean:tstests": "rm -Rf typescript_tests/*.js && rm -Rf typescript_tests/*.js.map && rm -Rf typescript_tests/apps/**/*.js && rm -Rf typescript_tests/apps/**/*.js.map",
     "lint": "eslint .",
+    "prepublish": "npm run build",
     "test": "istanbul cover _mocha -- test/* -R spec",
     "test:trace": "mocha test/*",
-    "test:debug": "mocha --debug-brk test/*",
-    "test:config": "mocha test/config",
+    "test:debug": "_mocha --debug-brk test/*",
+    "test:config": "mocha test/config", 
     "test:example": "mocha test/example",
+    "test:typescript": "_mocha --debug-brk typescript_tests/unittest.js",
     "test-d": "istanbul cover _mocha -- test/daemon/* -R spec",
     "test-da": "istanbul cover _mocha -- test/daemon_auto/* -R spec"
   },
