--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "include": [
     "./lib/**/*",
+    "./amorphic.ts",
     "./index.ts",
     "./client.ts"
   ],
   "compilerOptions": {
     "module": "commonjs",
     "moduleResolution": "node",
-    "allowJs": true,
     "target": "es5",
     "lib": [
       "dom",
